# 221_329_Nikitin

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.h  trx.h
src/: mainwindow.cpp  trx.cpp
ui/: mainwindow.ui
